--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "3.9.2",
+    "axios": "^0.18.0",
+    "d3": "^5.9.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-nvd3": "^0.5.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
