--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "d3": "^5.9.1",
     "react": "^16.8.2",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
     "react-nvd3": "^0.5.7",
     "react-router-dom": "^4.3.1",
